# polyvinyl-acetate

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.relay  Dockerfile.web  Dockerfile.worker  LICENSE  README.md  add_book.sh  add_post.sh  build-prod.sh  build.sh  build_common.sh  build_prod.sh  clean.sh  clean_prod.sh  count.py  delete.py  delete_prod.sh  docker_clean.sh  feed.py  get_count.sh  get_depth.sh  get_results.py  helpers.py  insert.py  jaeger-operator.yaml  jaeger.yaml  open_jaeger_port.sh  provision_prod.sh  registry_clean.sh  relay-prod.yaml  relay.yaml  run.sh  scale_worker.sh  splat_pairs.py  start_local_jaeger.sh  start_prod.sh  test.py  web-prod.yaml  (+3 more)
benches/: my_benchmark.rs
migrations/2022-03-06-221306_fake/: down.sql  up.sql
migrations/2022-03-15-144433_create_books/: up.sql
migrations/2022-03-15-210434_todo/: up.sql
migrations/2022-03-20-143503_create_sentences/: down.sql  up.sql
migrations/2022-03-21-160352_create_pairs/: down.sql  up.sql
migrations/2022-03-23-212155_create_orthos/: down.sql  up.sql
migrations/2022-06-04-165251_create_phrases/: down.sql  up.sql
migrations/2022-07-30-202513_create_vocabulary/: up.sql
src/: book_todo_handler.rs  ex_nihilo_handler.rs  lib.rs  main.rs  models.rs  ortho.rs  ortho_todo_handler.rs  over_on_ortho_found_handler.rs  pair_todo_handler.rs  phrase_ortho_handler.rs  phrase_todo_handler.rs  schema.rs  sentence_todo_handler.rs  up_handler.rs  up_helper.rs  up_on_ortho_found_handler.rs  web_helper.rs  worker_helper.rs
