[package]
name = "polyvinyl-acetate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rand = "0.8.5"
diesel_migrations = "1.4.0"
openssl = "0.10.38"
openssl-sys = "0.9.72"
amiquip = "0.4.2"
native-tls = "0.2.8"
serde = "1.0.136"
bincode = "1.3.3"
anyhow = "1.0"
maplit = "1.0.2"
itertools = "0.10.3"