[package]
name = "polyvinyl-acetate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
openssl = "0.10.38"
openssl-sys = "0.9.72"

native-tls = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0"
maplit = "1.0.2"
itertools = "0.10.3"
gremlin-client = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false